# c_viewer

./: .gitignore  CMakeLists.txt  README.md
src/: array.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  sorting.c  sorting.h  triangle.c  triangle.h  vector.c  vector.h
